<resources>
    <string name="app_name">HSE Meditation App</string>
    <string name="button">Button</string>
    <string name="text_view">You pressed button %s times</string>
    <string name="start_text_view">Press button</string>
    <string name="home">Home</string>
    <string name="meditation">Meditation</string>
    <string name="meditations">Meditations</string>
    <string name="course">Course</string>
    <string name="history">History</string>
    <string name="add_course">Add course</string>
    <string name="change_course">Change course</string>
    <string name="create_course">Create course</string>
    <string name="course_info">Course info</string>
    <string name="download_course">Download course</string>
    <string name="new_course">New course</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="date">Date</string>
    <string name="duration">Duration in minutes</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write your comment here</string>
    <string name="edit_entry">Edit entry</string>
    <string name="profile_picture">Profile picture</string>
    <string name="meditation_statistics">Meditation statistics</string>
    <string name="today">Today:</string>
    <string name="this_week">This week:</string>
    <string name="meditation_of_the_day">Meditation of the day</string>
    <string name="favorite_meditations">Your favorite meditations</string>
    <string name="favorite">Favorite</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="start">Start</string>
    <string name="build_your_expertize">Build your expertize</string>
    <string name="practice">Practice</string>
    <string name="minutes">%d minutes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="calculating">calculating…</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="course_level">Course level</string>
    <string name="zero">0</string>
    <string name="about_message">
        Team:\n
        <ul>\n
            <li>Danil Bubnov</li>\n
            <li>Alexey Luchinin</li>\n
            <li>Mark Vavilov</li>\n
        </ul>\n
        Contacts:\n
        <ul>\n
            <li>email: hsemeditaionapp@gmail.com</li>\n
        </ul>\n
    </string>
    <string name="_0_00">0:00</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="you_have_completed">You have completed %s meditation!</string>
    <string name="click_to_edit_record">Click to edit record</string>
    <string name="new_course_instruction">Make Pull Request to https://github.com/KaperD/HSEMeditations repository with your course in json + music files format\nYou can see example in courses/example_course/ folder\nYour course should be placed in courses/your_course_id folder</string>
</resources>
